--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ seaborn_scatter_token_loss_vs_attention_gini.png
 seaborn_scatter_token_loss_vs_gradcam_coverage.png
 seaborn_scatter_token_loss_vs_gradcam_entropy.png
 seaborn_scatter_token_loss_vs_gradcam_gini.png
+filtered_entropy_loss_threshold_analysis.png
